@@ -2,31 +2,31 @@ import { FarmRPG } from '../../farmrpg';
 import QuickSeeds from './QuickSeeds.svelte';
 
 export namespace PlayerFarm {
-	export interface SeedProps { name: string; id: number; img: string; }
+	export interface SeedProps { name: string; id: number; level: number, img: string; }
 	const seeds: SeedProps[] = [
-		{ name: "Pepper", id: 12, img: "/img/items/seeds_peppers.png" },
-		{ name: "Carrot", id: 20, img: "/img/items/seeds_carrots.png" },
-		{ name: "Pea", id: 28, img: "/img/items/seeds_peas.png" },
-		{ name: "Cucumber", id: 30, img: "/img/items/seeds_cucumber.png" },
-		{ name: "Eggplant", id: 14, img: "/img/items/seeds_eggplants.png" },
-		{ name: "Radish", id: 32, img: "/img/items/seeds_radish.png" },
-		{ name: "Onion", id: 34, img: "/img/items/seeds_onions.png" },
-		{ name: "Hops", id: 47, img: "/img/items/seeds_hops.png" },
-		{ name: "Potato", id: 49, img: "/img/items/seeds_potato.png" },
-		{ name: "Tomato", id: 16, img: "/img/items/seeds_tomato.png" },
-		{ name: "Leek", id: 51, img: "/img/items/seeds_leek.png" },
-		{ name: "Watermelon", id: 60, img: "/img/items/seeds_watermelon.png" },
-		{ name: "Corn", id: 64, img: "/img/items/seeds_corn.png" },
-		{ name: "Cabbage", id: 66, img: "/img/items/seeds_cabbage.png" },
-		{ name: "Pine", id: 410, img: "/img/items/seeds_pine.png" },
-		{ name: "Pumpkin", id: 68, img: "/img/items/seeds_pumpkin.png" },
-		{ name: "Wheat", id: 70, img: "/img/items/seeds_wheet.png" },
-		{ name: "Mushroom", id: 395, img: "/img/items/seeds_mushroom.png" },
-		{ name: "Broccoli", id: 257, img: "/img/items/seeds_broccoli.png" },
-		{ name: "Cotton", id: 255, img: "/img/items/seeds_cotton.png" },
-		{ name: "Sunflower", id: 374, img: "/img/items/seeds_sunflower.png" },
-		{ name: "Beet", id: 449, img: "/img/items/seeds_beet.png" },
-		{ name: "Rice", id: 631, img: "/img/items/seeds_rice.png" },
+		{ name: "Pepper", id: 12, level: 0, img: "/img/items/seeds_peppers.png" },
+		{ name: "Carrot", id: 20, level: 2, img: "/img/items/seeds_carrots.png" },
+		{ name: "Pea", id: 28, level: 4, img: "/img/items/seeds_peas.png" },
+		{ name: "Cucumber", id: 30, level: 6, img: "/img/items/seeds_cucumber.png" },
+		{ name: "Eggplant", id: 14, level: 8, img: "/img/items/seeds_eggplants.png" },
+		{ name: "Radish", id: 32, level: 10, img: "/img/items/seeds_radish.png" },
+		{ name: "Onion", id: 34, level: 12, img: "/img/items/seeds_onions.png" },
+		{ name: "Hops", id: 47, level: 14, img: "/img/items/seeds_hops.png" },
+		{ name: "Potato", id: 49, level: 16, img: "/img/items/seeds_potato.png" },
+		{ name: "Tomato", id: 16, level: 18, img: "/img/items/seeds_tomato.png" },
+		{ name: "Leek", id: 51, level: 20, img: "/img/items/seeds_leek.png" },
+		{ name: "Watermelon", id: 60, level: 23, img: "/img/items/seeds_watermelon.png" },
+		{ name: "Corn", id: 64, level: 26, img: "/img/items/seeds_corn.png" },
+		{ name: "Cabbage", id: 66, level: 30, img: "/img/items/seeds_cabbage.png" },
+		{ name: "Pine", id: 410, level: 40, img: "/img/items/seeds_pine.png" },
+		{ name: "Pumpkin", id: 68, level: 40, img: "/img/items/seeds_pumpkin.png" },
+		{ name: "Wheat", id: 70, level: 50, img: "/img/items/seeds_wheet.png" },
+		{ name: "Mushroom", id: 395, level: 60, img: "/img/items/seeds_mushroom.png" },
+		{ name: "Broccoli", id: 257, level: 60, img: "/img/items/seeds_broccoli.png" },
+		{ name: "Cotton", id: 255, level: 70, img: "/img/items/seeds_cotton.png" },
+		{ name: "Sunflower", id: 374, level: 80, img: "/img/items/seeds_sunflower.png" },
+		{ name: "Beet", id: 449, level: 90, img: "/img/items/seeds_beet.png" },
+		{ name: "Rice", id: 631, level: 91, img: "/img/items/seeds_rice.png" },
 	];
 
 	export function getFarmID() { return $('#croparea [data-farm]').data('farm'); }
