@@ -51,3 +51,24 @@ export async function buyItem(id, qty) {
 			return data;
 		});
 }
+
+const cachedLevels = {
+	farming: 0,
+	fishing: 0,
+	crafting: 0,
+	exploring: 0,
+	cooking: 0,
+};
+/**
+ * @returns map of levels; level is 0 if undefined
+ */
+export function getSkillLevels() {
+	if ($(`[href="progress.php?type=Farming"]`).length) {
+		cachedLevels.farming = parseInt($(`[href="progress.php?type=Farming"]`).parent().text().replaceAll(/[^\d]/g, "") || '0');
+		cachedLevels.fishing = parseInt($(`[href="progress.php?type=Fishing"]`).parent().text().replaceAll(/[^\d]/g, "") || '0');
+		cachedLevels.crafting = parseInt($(`[href="progress.php?type=Crafting"]`).parent().text().replaceAll(/[^\d]/g, "") || '0');
+		cachedLevels.exploring = parseInt($(`[href="progress.php?type=Exploring"]`).parent().text().replaceAll(/[^\d]/g, "") || '0');
+		cachedLevels.cooking = parseInt($(`[href="progress.php?type=Cooking"]`).parent().text().replaceAll(/[^\d]/g, "") || '0');
+	}
+	return cachedLevels;
+}
